-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.0
-
None
-
af1a179cc8b599523ca858b1b9f55c93a734d047
Declaring an header as a precompiled one causes qnamespace.h and qobjectdefs.h to raise a ton of errors when compiling the project.
It worked as intended on Qt 5.9.3 and previous versions.
- is duplicated by
-
QTBUG-65850 qmake generated Makefile with precompiled header compiles as c instead of c++ on MSVC
-
- Closed
-